--- a/partials/_game-buttons.scss
+++ b/partials/_game-buttons.scss
@@ -1,10 +1,13 @@
-.test-btn {
-  background: white;
-  height: 100px;
-  width: 100px;
-  border-radius: 100%;
-  // border: 15px solid orange;
-  box-shadow: 0px -2px 2px pink;
+@media (width > 750px) {
+  .box-shadow-win {
+    height: 140px;
+    width: 140px;
+    border-radius: 100%;
+    box-shadow: 0 0 0 35px rgba(255, 255, 255, 0.04),
+      0 0 0 70px rgba(255, 255, 255, 0.03),
+      0 0 0 105px rgba(255, 255, 255, 0.02);
+    display: inline-block;
+  }
 }
 
 %rps-button-placeholder {
@@ -24,10 +27,6 @@
   height: 100%;
   width: 100%;
   box-shadow: 0 -3px 0px rgb(187, 190, 209);
-}
-
-.rps-buttons-container {
-  // visibility: hidden;
 }
 
 @mixin btn-style($main-col, $second-col) {
@@ -78,6 +77,7 @@
     grid-template-areas: "a a b b" "c d d e";
     gap: 1rem;
     position: relative;
+    overflow: clip;
   }
 
   &__background-line {
@@ -177,6 +177,7 @@
     margin-top: 2rem;
     max-width: 550px;
     width: 550px;
+    overflow: visible;
 
     &__background-line::after {
       transform: rotate(45deg);
