--- a/partials/_game-rules.scss
+++ b/partials/_game-rules.scss
@@ -39,13 +39,17 @@
   margin-top: 5rem;
 }
 
+.rps-rules-button-container {
+  min-height: 20rem;
+  height: 18.5rem;
+}
+
 .modal-close-container {
   width: 100%;
   height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  // margin-top: 2rem;
 }
 
 .modal-close,
