--- a/style.css
+++ b/style.css
@@ -543,6 +543,11 @@ main {
   margin-top: 5rem;
 }
 
+.rps-rules-button-container {
+  min-height: 20rem;
+  height: 18.5rem;
+}
+
 .modal-close-container {
   width: 100%;
   height: 100px;
